Fixed Chatbox Layout issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
 * {
     margin: 0;
+    padding: 0;
 }
 
 body {
@@ -11,12 +12,10 @@ body {
 #videoDiv {
     display: grid;
     grid-gap: 30px;
-    height: 80%;
-    position: relative;
-    left: 1%;
-    top: 50px;
+    margin: 10px;
     grid-template-columns: repeat(auto-fill, 300px);
     grid-auto-rows: 300px;
+
 }
 
 #disconnectCall{
@@ -24,8 +23,8 @@ body {
     bottom:30px;
     right:25%;
     left:50%;
-}
 
+}
 
 p {
     background-color: rgb(5, 5, 5);
@@ -47,9 +46,10 @@ video {
 }
 
 #myVideo {
+    min-width: 300px;
     height: 30%;
     width: 15%;
-    position: fixed;
+    position: absolute;
     top: 60%;
     left: 1%;
 }
@@ -68,17 +68,31 @@ video {
 
 
 .container{
-    width: 300px;
-    border: 2px solid black;
+    min-width: 300px;
+    border: 6px solid #4F5D75;
     border-radius: 13px;
-    margin: auto;
-    height: 40vh;
+    height: 20vh;
     padding: 33px;
     overflow-y: auto;
+    margin-right: 23px;
     margin-bottom: 23px;
-    position: fixed;
+    position: absolute;
     left: 70%;
-    top: 250px;
+    top: 55%;
+}
+
+#send-container{
+    display:block;
+    margin: auto;
+    text-align: center;
+    /*min-width: 50px;*/
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 9%;
+    top: 90%;
 }
 
 .message{
@@ -90,6 +104,7 @@ video {
     border: 2px solid black;
     border-radius: 10px;
 }
+
 .left{
     float: left;
     clear:both;
@@ -100,21 +115,8 @@ video {
     clear:both;
 }
 
-#send-container{
-    display:block;
-    margin: auto;
-    text-align: center;
-    max-width: 755px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 57%;
-    top: 88%;
-}
 #messageInp{
-    width: 30%;
+    width: 80%;
     border: 2px solid black;
     border-radius: 6px;
     height: 34px;
@@ -123,7 +125,7 @@ video {
 
 .btn{
     margin: 0 5px;
-    width: 9%;
+    width: 20%;
     cursor: pointer;
     border: 2px solid black;
     border-radius: 6px;
